--- a/scss/_fauxSelect.scss
+++ b/scss/_fauxSelect.scss
@@ -22,7 +22,6 @@
 		width: 100%;
 		-webkit-overflow-scrolling: touch;
 		-ms-overflow-style: none;
-		overflow: -moz-scrollbars-none;
 		z-index: -1;
 		&::-webkit-scrollbar {
 			width: 0 !important;
@@ -117,7 +116,6 @@ $faux_font_keys: map-keys($faux_fonts);
 			overflow: scroll;
 			-webkit-overflow-scrolling: touch;
 			-ms-overflow-style: none;
-			overflow: -moz-scrollbars-none;
 			z-index: -1;
 			&::-webkit-scrollbar {
 				width: 0 !important;
